Installment split-stream
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements310@1707 d91eb1b3-1215-0410-9718-d41490442091